--- a/pages/home.html
+++ b/pages/home.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="info site about trees">
-    <link rel="stylesheet" href="../styles/general.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-<link
-    <script defer src="../scripts/script.js"></script>
+    <meta name="description" content="info site about trees" />
+    <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" href="../styles/main.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -253,10 +252,10 @@
 
       <section class="favorites">
         <div class="container-large">
+          <h2>Some of Our Tree Favorites</h2>
           <div class="favorites__body">
-            <h2>Some of Our Tree Favorites</h2>
             <div class="sliders favorites__carousel">
-              <div class="tree">
+              <div class="tree" id="tree_1">
                 <div class="tree__body">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
@@ -274,13 +273,10 @@
                       <a href="#">learn more</a>
                     </div>
                   </div>
-                  <div class="tree__img">
-                    <img src="../images/carousel/carousel_1.png" alt="" />
-                  </div>
                 </div>
               </div>
 
-              <div class="tree">
+              <div class="tree" id="tree_2">
                 <div class="tree__body">
                   <h3>Chinese Pistache</h3>
                   <div class="tree__hover">
@@ -304,7 +300,7 @@
                 </div>
               </div>
 
-              <div class="tree">
+              <div class="tree" id="tree_3">
                 <div class="tree__body">
                   <h3>Celdar Elm</h3>
                   <div class="tree__hover">
@@ -328,7 +324,7 @@
                 </div>
               </div>
 
-              <div class="tree">
+              <div class="tree" id="tree_3">
                 <div class="tree__body">
                   <h3>Red Oak</h3>
                   <div class="tree__hover">
@@ -352,7 +348,7 @@
                 </div>
               </div>
 
-              <div class="tree">
+              <div class="tree" id="tree_4">
                 <div class="tree__body">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
@@ -375,8 +371,31 @@
                   </div>
                 </div>
               </div>
+              <div class="tree" id="tree_5">
+                <div class="tree__body">
+                  <h3>Chinese Pistache</h3>
+                  <div class="tree__hover">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut labore et dolore magna aliqua.
+                    </p>
 
-              <div class="tree">
+                    <div class="tree__price">
+                      <p>Price:</p>
+                      <p>200$</p>
+                    </div>
+                    <div class="tree__btn btn">
+                      <a href="#">learn more</a>
+                    </div>
+                  </div>
+                  <div class="tree__img">
+                    <img src="../images/carousel/carousel_2.png" alt="" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="tree" id="tree_6">
                 <div class="tree__body">
                   <h3>Celdar Elm</h3>
                   <div class="tree__hover">
@@ -414,6 +433,9 @@
         nomodule
         src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
       ></script>
+      <script src="../scripts/jquery-3.6.2.min.js"></script>
+      <script src="../slick/slick.min.js"></script>
+      <script src="../scripts/script.js"></script>
     </main>
   </body>
 </html>
