--- a/pages/home.html
+++ b/pages/home.html
@@ -122,9 +122,9 @@
         </div>
       </section>
 
-      <section class="section-testimonials" id="testimonials">
+      <section class="section-services" id="testimonials">
         <div class="color">
-          <div class="testimonials-container">
+          <div class="services-container">
             <h1 class="heading-primary">Our Services</h1>
             <p class="hero-description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -404,18 +404,208 @@
         </div>
       </section>
 
-      <footer></footer>
-      <script
-        type="module"
-        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-      ></script>
-      <script
-        nomodule
-        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-      ></script>
-      <script src="../scripts/jquery-3.6.2.min.js"></script>
-      <script src="../slick/slick.min.js"></script>
-      <script src="../scripts/script.js"></script>
+      <section class="testimonials">
+        <div class="container">
+          <div class="testimonials__body">
+            <div class="testimonial">
+              <div class="testimonial__body">
+                <div class="testimonial__head">
+                  <div class="testimonial__img">
+                    <img
+                      src="../images/icon/default_user.svg"
+                      alt="Dr. Cameron Brown"
+                    />
+                  </div>
+
+                  <div class="testimonial__name">
+                    <h3>Dr. Cameron Brown</h3>
+                    <div class="testimonial__stars">★★★★★</div>
+                  </div>
+                </div>
+                <div class="testimonial__text">
+                  Heather was so helpful and answered all of my questions. She
+                  is so professional and gave me the best customer service I
+                  have ever received at a retail nursery. She immediately
+                  greeted me upon my arrival and made me feel welcome without
+                  being pushy. She seems to really love her job and this
+                  positively impacts her customers.
+                </div>
+              </div>
+            </div>
+
+            <div class="testimonial">
+              <div class="testimonial__body">
+                <div class="testimonial__head">
+                  <div class="testimonial__img">
+                    <img
+                      src="../images/testimonials/foto1.jpg"
+                      alt="Dr. Cameron Brown"
+                    />
+                  </div>
+
+                  <div class="testimonial__name">
+                    <h3>Mr. James Smit</h3>
+                    <div class="testimonial__stars">★★★★★</div>
+                  </div>
+                </div>
+                <div class="testimonial__text">
+                  Heather was so helpful and answered all of my questions. She
+                  is so professional and gave me the best customer service I
+                  have ever received at a retail nursery. She immediately
+                  greeted me upon my arrival and made me feel welcome without
+                  being pushy. She seems to really
+                </div>
+              </div>
+            </div>
+
+            <div class="testimonial">
+              <div class="testimonial__body">
+                <div class="testimonial__head">
+                  <div class="testimonial__img">
+                    <img
+                      src="../images/testimonials/foto2.jpg"
+                      alt="Dr. Cameron Brown"
+                    />
+                  </div>
+
+                  <div class="testimonial__name">
+                    <h3>Ms. Barbara Leon</h3>
+                    <div class="testimonial__stars">★★★★★</div>
+                  </div>
+                </div>
+                <div class="testimonial__text">
+                  Heather was so helpful and answered all of my questions. She
+                  is so professional and gave me the best customer service I
+                  have ever received at a retail nursery. She immediately
+                  greeted me upon my arrival and made me feel welcome without
+                  being pushy.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="subscribe__body">
+          <h3>
+            Enjoy our <span>promotions, discounts and tips</span> when you join
+            our mailing list
+          </h3>
+          <form>
+            <div class="subscribe__row">
+              <input type="email" placeholder="Enter Your Email" required />
+              <div class="subscribe__btn btn">
+                <button>join the list</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__widgets">
+            <div class="widget">
+              <div class="widget__body">
+                <h3>HOURS & LOCAtION</h3>
+                <p>
+                  <strong>
+                    2317 Fort Worth Hwy<br />
+                    Weatherford, Texas 76087
+                  </strong>
+                </p>
+                <p>
+                  Mon-Sat: 9 AM – 5 PM<br />
+                  Closed Sunday
+                </p>
+              </div>
+            </div>
+
+            <div class="widget">
+              <div class="widget__body">
+                <h3>JUDY’S REcENT POSTS</h3>
+                <ul>
+                  <li><a href="#">Native trees and shrubs for Bluebirds</a></li>
+                  <li><a href="#">Fun with Tillandsias, or air plants</a></li>
+                  <li><a href="#">Fall is an Ideal Time to Plant Trees</a></li>
+                  <li><a href="#">Drought Tolerant Plants</a></li>
+                  <li>
+                    <a href="#">Urban sprawl and deer-resistant plants</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="widget">
+              <div class="widget__body">
+                <h3>MENu</h3>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Judy’s Journal</a></li>
+                  <li><a href="#">Shop Online</a></li>
+                  <li><a href="#">Get Financing</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="widget">
+              <div class="widget__body widget__body--right">
+                <h3>COnTACT</h3>
+                <div class="telephone">
+                  <a href="tel:817-596-0003">817-596-0003</a>
+                </div>
+                <p><strong>info@stuartnursery.com</strong></p>
+
+                <div class="widget__socials">
+                  <div class="widget__socials-ithem">
+                    <a href="#"
+                      ><img src="./img/icon/socials_fb.svg" alt=""
+                    /></a>
+                  </div>
+                  <div class="widget__socials-ithem">
+                    <a href="#"
+                      ><img src="./img/icon/socials_telegram.svg" alt=""
+                    /></a>
+                  </div>
+                  <div class="widget__socials-ithem">
+                    <a href="#"
+                      ><img src="./img/icon/socials_instagram.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <div class="container">
+            <div class="footer__row">
+              <div class="footer__text">
+                Copyright © 2020 <a href="#">Stuart Nursery</a>
+              </div>
+              <div class="footer__terms">
+                <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a> |
+                <a href="#">Site Map</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="../scripts/jquery-3.6.2.min.js"></script>
+    <script src="../slick/slick.min.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
