--- a/pages/home.html
+++ b/pages/home.html
@@ -505,7 +505,7 @@
     </main>
 
       <footer class="footer">
-        <div class="container">
+        <div class="container-footer">
           <div class="footer__widgets">
             <div class="widget">
               <div class="widget__body">
@@ -562,17 +562,17 @@
                 <div class="widget__socials">
                   <div class="widget__socials-ithem">
                     <a href="#"
-                      ><img src="./img/icon/socials_fb.svg" alt=""
+                      ><img src="../images/icons/logo-facebook.svg" alt=""
                     /></a>
                   </div>
                   <div class="widget__socials-ithem">
                     <a href="#"
-                      ><img src="./img/icon/socials_telegram.svg" alt=""
+                      ><img src="../images/icons/logo-telegram.svg" alt=""
                     /></a>
                   </div>
                   <div class="widget__socials-ithem">
                     <a href="#"
-                      ><img src="./img/icon/socials_instagram.svg" alt=""
+                      ><img src="../images/icons/logo-instagram.svg" alt=""
                     /></a>
                   </div>
                 </div>
