--- a/pages/home.html
+++ b/pages/home.html
@@ -19,25 +19,27 @@
     <title>Nursery</title>
   </head>
   <body>
-    <header class="header">
+   <header class="header">
       <div class="header__wrapper-top">
-        <div class="inner">
-          <div class="item">
+        <div class="header__wrapper-top__row">
+          <div class="row__adress">
+            2317 Fort Worth Hwy<br />
+            Weatherford, Texas 76087
+          </div>
+          <div class="row__logo">
+            <a href="#"> <img src="../images/logo.png" alt="" /></a>
+            <p>WE SPECIALIZE IN TREE SALES & INSTAllaTION</p>
+          </div>
+          <div class="row__work-time">
             <p>
-              2317 Fort Worth Hwy<br />
-              Weatherford, Texas 76087
+              Open Monday-Saturday<br />
+              9 AM – 5 PM
             </p>
-          </div>
-          <div class="item">
-            <img src="../images/logo.png" alt="" />
-            <p>WE SPECIALIZE IN TREE SALES & INSTALLATION</p>
-          </div>
-          <div class="item">
-            <p>Open Monday-Saturday 9 AM – 5 PM</p>
-            <a href="tel:817-596-0003">817-596-0003</a>
+            <div class="telephone">
+              <a href="tel:817-596-0003">817-596-0003</a>
+            </div>
           </div>
         </div>
-      </div>
 
       <div class="dropdown">
         <nav class="header__wrapper-bottom">
