--- a/pages/home.html
+++ b/pages/home.html
@@ -489,6 +489,7 @@
       </section>
 
       <section class="subscribe">
+        <div class="color">
         <div class="subscribe__body">
           <h3>
             Enjoy our <span>promotions, discounts and tips</span> when you join
@@ -503,6 +504,7 @@
             </div>
           </form>
         </div>
+      </div>
       </section>
     </main>
 
