--- a/pages/home.html
+++ b/pages/home.html
@@ -41,49 +41,47 @@
           </div>
         </div>
 
-      <div class="dropdown">
-        <nav class="header__wrapper-bottom">
-          <ul>
-            <li>
-              <a href="#">
-                <ion-icon class="home-icon" name="home-outline"></ion-icon>
-              </a>
-            </li>
-            <li>
-              <a href="#"> Our Trees+</a>
-              <ul>
-                <li><a href="#">Cascalote</a></li>
-                <li><a href="#">Eastern Redbud</a></li>
-                <li><a href="#">Sweetbay</a></li>
-                <li><a href="#">Ginkgo Tree</a></li>
-                <li><a href="#">European Hornbeam</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Flowers</a></li>
-            <li>
-              <a href="#">Shrubs+</a>
-              <ul>
-                <li><a href="#">Cascalote</a></li>
-                <li><a href="#">Eastern Redbud</a></li>
-                <li><a href="#">Sweetbay</a></li>
-                <li><a href="#">Ginkgo Tree</a></li>
-                <li><a href="#">European Hornbeam</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Herbs</a></li>
-            <li><a href="#">Fertilizer</a></li>
-            <li><a href="#">Soil & Admendments</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </nav>
-
-        <button class="btn">
-          <a href="#">Request a Quote</a>
-        </button>
-      </div>
-
-      <!--fixed menu END-->
-    </header>
+        <div class="dropdown">
+          <nav class="header__wrapper-bottom">
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="../images/icons/home-outline.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="#"> Our Trees+</a>
+                <ul>
+                  <li><a href="#">Cascalote</a></li>
+                  <li><a href="#">Eastern Redbud</a></li>
+                  <li><a href="#">Sweetbay</a></li>
+                  <li><a href="#">Ginkgo Tree</a></li>
+                  <li><a href="#">European Hornbeam</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Flowers</a></li>
+              <li>
+                <a href="#">Shrubs+</a>
+                <ul>
+                  <li><a href="#">Cascalote</a></li>
+                  <li><a href="#">Eastern Redbud</a></li>
+                  <li><a href="#">Sweetbay</a></li>
+                  <li><a href="#">Ginkgo Tree</a></li>
+                  <li><a href="#">European Hornbeam</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Herbs</a></li>
+              <li><a href="#">Fertilizer</a></li>
+              <li><a href="#">Soil & Admendments</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </nav>
+  
+          <button class="btn">
+            <a href="#">Request a Quote</a>
+          </button>
+        </div>
+      </header>
 
     <main>
       <section class="section-hero">
