--- a/pages/home.html
+++ b/pages/home.html
@@ -42,44 +42,48 @@
         </div>
 
         <div class="dropdown">
-          <nav class="header__wrapper-bottom">
-            <ul>
-              <li>
-                <a href="#">
-                  <img src="../images/icons/home-outline.svg" alt="" />
-                </a>
-              </li>
-              <li>
-                <a href="#"> Our Trees+</a>
-                <ul>
-                  <li><a href="#">Cascalote</a></li>
-                  <li><a href="#">Eastern Redbud</a></li>
-                  <li><a href="#">Sweetbay</a></li>
-                  <li><a href="#">Ginkgo Tree</a></li>
-                  <li><a href="#">European Hornbeam</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Flowers</a></li>
-              <li>
-                <a href="#">Shrubs+</a>
-                <ul>
-                  <li><a href="#">Cascalote</a></li>
-                  <li><a href="#">Eastern Redbud</a></li>
-                  <li><a href="#">Sweetbay</a></li>
-                  <li><a href="#">Ginkgo Tree</a></li>
-                  <li><a href="#">European Hornbeam</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Herbs</a></li>
-              <li><a href="#">Fertilizer</a></li>
-              <li><a href="#">Soil & Admendments</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </nav>
-  
-          <button class="btn">
-            <a href="#">Request a Quote</a>
-          </button>
+          <div class="container-large d-flex">
+            <nav class="header__wrapper-bottom">
+              <ul class="header__main-list">
+                <li class="header__main-list__item">
+                  <a href="#">
+                    <img src="../images/icons/home-outline.svg" alt="" />
+                  </a>
+                </li>
+                <li class="header__main-list__item" id="menu">
+                  <a href="#"> Our Trees</a>
+                  <ul class="header__main-list__submenu">
+                    <li class="header__main-list__submenu__child"><a href="#">Cascalote</a></li>
+                    <li class="header__main-list__submenu__child"><a href="#">Eastern Redbud</a></li>
+                    <li class="header__main-list__submenu__child"><a href="#">Sweetbay</a></li>
+                    <li class="header__main-list__submenu__child"><a href="#">Ginkgo Tree</a></li>
+                    <li class="header__main-list__submenu__child"><a href="#">European Hornbeam</a></li>
+                  </ul>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Flowers</a>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Shrubs</a>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Herbs</a>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Fertilizer</a>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Soil & Admendments</a>
+                </li>
+                <li class="header__main-list__item">
+                  <a href="#">Contact Us</a>
+                </li>
+              </ul>
+            </nav>
+            <button class="btn ">
+              <a href="#">Request a Quote</a>
+            </button>
+          </div>
         </div>
       </header>
 
@@ -226,7 +230,7 @@
       </section>
 
       <section class="section-video">
-        <div class="video">
+        <div class="video container-medium"">
           <div class="video-text-box">
             <h1 class="video-primary">Stuart Nursery Tree Farm</h1>
             <p class="video-description">
@@ -251,7 +255,7 @@
       </section>
 
       <section class="favorites">
-        <div class="container-large">
+        <div class="container-medium">
           <h2>Some of Our Tree Favorites</h2>
           <div class="favorites__body">
             <div class="sliders favorites__carousel">
@@ -597,15 +601,6 @@
         </div>
       </footer>
     </div>
-
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
     <script src="../scripts/jquery-3.6.2.min.js"></script>
     <script src="../slick/slick.min.js"></script>
     <script src="../scripts/script.js"></script>
