--- a/pages/home.html
+++ b/pages/home.html
@@ -128,9 +128,9 @@
 
       <section class="section-services" id="testimonials">
         <div class="color">
-          <div class="services-container">
-            <h1 class="heading-primary">Our Services</h1>
-            <p class="hero-description">
+          <div class="services-container container-medium">
+            <h1 class="heading-first">Our Services<br/></h1>
+            <p class="hero-second">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -230,20 +230,19 @@
       </section>
 
       <section class="section-video">
-        <div class="video container-medium"">
+        <div class="container-medium">
+        <div class="video">
           <div class="video-text-box">
             <h1 class="video-primary">Stuart Nursery Tree Farm</h1>
+            <div class="paragraph">
             <p class="video-description">
-              <span> Over 75 years</span>, Stuart Nursery has been growing
-              trees<br />
-              and shrubs in our own nurseries, so that we can provide a
-              <br />consistent supply of quality plants to our customers.
+              <span> Over 75 years</span>, Stuart Nursery has been growing trees and shrubs in our own nurseries, so that we can provide a consistent supply of quality plants to our customers.
             </p>
             <p class="video-description">
-              Add a shady spot or a splash of color to your yard with a tree
-              from our wide selection of trees.
+              Add a shady spot or a splash of color to your yard with a tree from our wide selection of trees.
             </p>
-            <button class="btn">
+          </div>
+            <button class="btn video-btn">
               <a href="#">Find Your Tree</a>
             </button>
           </div>
@@ -251,6 +250,7 @@
             <img src="../images/video.png" class="video-img" alt="Nature" />
             <img src="../images/Vector.png" class="vector-img" alt="Nature" />
           </div>
+    </div>
         </div>
       </section>
 
@@ -416,7 +416,7 @@
                 <div class="testimonial__head">
                   <div class="testimonial__img">
                     <img
-                      src="../images/testimonials/person-outline.svg"
+                      src="../images/testimonials/outline_user.svg"
                       alt="Dr. Cameron Brown"
                     />
                   </div>
@@ -443,12 +443,12 @@
                   <div class="testimonial__img">
                     <img
                       src="../images/testimonials/foto1.jpg"
-                      alt="Dr. Cameron Brown"
+                      alt="Ms. Williams  Alicia"
                     />
                   </div>
 
                   <div class="testimonial__name">
-                    <h3>Mr. James Smit</h3>
+                    <h3>Ms. Williams  Alicia</h3>
                     <div class="testimonial__stars">★★★★★</div>
                   </div>
                 </div>
@@ -468,12 +468,12 @@
                   <div class="testimonial__img">
                     <img
                       src="../images/testimonials/foto2.jpg"
-                      alt="Dr. Cameron Brown"
+                      alt="Mr. Alex Anderson"
                     />
                   </div>
 
                   <div class="testimonial__name">
-                    <h3>Ms. Barbara Leon</h3>
+                    <h3>Mr. Alex Anderson</h3>
                     <div class="testimonial__stars">★★★★★</div>
                   </div>
                 </div>
