--- a/pages/home.html
+++ b/pages/home.html
@@ -409,7 +409,7 @@
       </section>
 
       <section class="testimonials">
-        <div class="container">
+        <div class="container-min">
           <div class="testimonials__body">
             <div class="testimonial">
               <div class="testimonial__body">
@@ -506,7 +506,7 @@
             </div>
           </form>
         </div>
-      </div>
+    </div>
       </section>
     </main>
 
