--- a/pages/home.html
+++ b/pages/home.html
@@ -511,6 +511,7 @@
     </main>
 
       <footer class="footer">
+        <div class="container-medium">
         <div class="container-footer">
           <div class="footer__widgets">
             <div class="widget">
@@ -586,8 +587,9 @@
             </div>
           </div>
         </div>
+        </div>
         <div class="footer__copyright">
-          <div class="container">
+          <div class="container-medium">
             <div class="footer__row">
               <div class="footer__text">
                 Copyright © 2020 <a href="#">Stuart Nursery</a>
@@ -599,6 +601,7 @@
             </div>
           </div>
         </div>
+      
       </footer>
     </div>
     <script src="../scripts/jquery-3.6.2.min.js"></script>
