--- a/pages/home.html
+++ b/pages/home.html
@@ -90,47 +90,47 @@
     <main>
       <section class="section-hero">
         <div class="hero">
-          <div class="hero-text-box">
-            <h1 class="heading-primary">Quality Trees, Shrubs and More</h1>
-            <span class="tag-title">Family Owned Since 1945</span>
-            <p class="hero-description">
+          <div class="hero__text-box">
+            <h1 class="hero__text-box__primary">Quality Trees, Shrubs and More</h1>
+            <span class="hero__text-box__tag-title">Family Owned Since 1945</span>
+            <p class="hero__text-box__description">
               Stuart Nursery provides quality tree sales and installation
               services to Parker and surrounding counties. We specialize in
               Texas native plants for your residence, office or ranch.
             </p>
-            <p class="hero-description">
+            <p class="hero__text-box__description">
               Stop by and see our tremendous selection of native and traditional
               plants or consult with one of our landscape experts.
             </p>
-            <button class="btn">
+            <button class="hero__text-box__btn btn">
               <a href="#">Request a Quote</a>
             </button>
           </div>
-          <div class="hero-img-box">
+          <div class="hero__img-box">
             <img
               src="../images/rectangle-images .png"
-              class="hero-img"
+              class="hero__img-box__img"
               alt="Nature"
             />
           </div>
         </div>
       </section>
 
-      <section class="section-quality">
-        <div class="container">
-          <div class="logos">
-            <img src="../images/quality.png" alt="quality logo" />
-            <img src="../images/quality.png" alt="quality logo" />
-            <img src="../images/quality.png" alt="quality logo" />
+      <section class="section-mark-quality">
+        <div class="mark-quality__container">
+          <div class="mark-quality__logos">
+            <img src="../images/mark-quality.png" alt="quality logo" />
+            <img src="../images/mark-quality.png" alt="quality logo" />
+            <img src="../images/mark-quality.png" alt="quality logo" />
           </div>
         </div>
       </section>
 
-      <section class="section-services" id="testimonials">
-        <div class="color">
-          <div class="services-container container-medium">
-            <h1 class="heading-first">Our Services<br/></h1>
-            <p class="hero-second">
+      <section class="section-services">
+        <div class="services">
+          <div class="services__text-box container-medium">
+            <h1 class="services__text-box__first">Our Services<br/></h1>
+            <p class="services__text-box__second">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -138,88 +138,86 @@
             </p>
           </div>
 
-          <div class="gallery">
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+          <div class="services__gallery">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_1.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">Tree Sales</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">Tree Sales</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
-
-                <!-- <figcaption>Caption</figcaption> -->
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_2.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">Flowers</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">Flowers</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_3.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">Shrubs</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">Shrubs</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery___icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallerym__item">
                 <img src="../images/services/card_4.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag"> Herbs</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag"> Herbs</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_5.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">Fertilizer</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">Fertilizer</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_6.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">Soil & Admendments</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">Soil & Admendments</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
               </figure>
             </div>
-            <div class="gallery-transform">
-              <figure class="gallery-item">
+            <div class="services__gallery__transform">
+              <figure class="services__gallery__item">
                 <img src="../images/services/card_7.jpg" alt="" />
-                <div class="gallery-content">
-                  <span class="tag">And More</span>
+                <div class="services__gallery__content">
+                  <span class="services__gallery__tag">And More</span>
                   <ion-icon
-                    class="icon-galery"
+                    class="services__gallery__icon"
                     name="arrow-forward-outline"
                   ></ion-icon>
                 </div>
@@ -232,23 +230,23 @@
       <section class="section-video">
         <div class="container-medium">
         <div class="video">
-          <div class="video-text-box">
-            <h1 class="video-primary">Stuart Nursery Tree Farm</h1>
-            <div class="paragraph">
-            <p class="video-description">
-              <span> Over 75 years</span>, Stuart Nursery has been growing trees and shrubs in our own nurseries, so that we can provide a consistent supply of quality plants to our customers.
+          <div class="video__text-box">
+            <h1 class="video__text-box__primary">Stuart Nursery Tree Farm</h1>
+            <div class="video__text-box__paragraph">
+            <p class="video__text-box__paragraph__description">
+              <span class="years"> Over 75 years</span>, Stuart Nursery has been growing trees and shrubs in our own nurseries, so that we can provide a consistent supply of quality plants to our customers.
             </p>
-            <p class="video-description">
+            <p class="video__text-box__paragraph__description">
               Add a shady spot or a splash of color to your yard with a tree from our wide selection of trees.
             </p>
           </div>
-            <button class="btn video-btn">
+            <button class="video__text-box__btn btn">
               <a href="#">Find Your Tree</a>
             </button>
           </div>
-          <div class="hero-img-box">
-            <img src="../images/video.png" class="video-img" alt="Nature" />
-            <img src="../images/Vector.png" class="vector-img" alt="Nature" />
+          <div class="video__img-box">
+            <img src="../images/video.png" class="video__img-box__video-img" alt="Nature" />
+            <img src="../images/button.png" class="video__img-box__button-img" alt="Nature" />
           </div>
     </div>
         </div>
@@ -257,10 +255,10 @@
       <section class="favorites">
         <div class="container-medium">
           <h2>Some of Our Tree Favorites</h2>
-          <div class="favorites__body">
-            <div class="sliders favorites__carousel">
+          <div class="favorites__box">
+            <div class="slides favorites__slideshow">
               <div class="tree" id="tree_1">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
                     <p>
@@ -278,13 +276,13 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_1.png" alt="" />
+                    <img src="../images/slideshow/slideshow_1.png" alt="" />
                   </div>
                 </div>
               </div>
 
               <div class="tree" id="tree_2">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Chinese Pistache</h3>
                   <div class="tree__hover">
                     <p>
@@ -302,13 +300,13 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_2.png" alt="" />
+                    <img src="../images/slideshow/slideshow_2.png" alt="" />
                   </div>
                 </div>
               </div>
 
               <div class="tree" id="tree_3">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Celdar Elm</h3>
                   <div class="tree__hover">
                     <p>
@@ -326,13 +324,13 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_3.png" alt="" />
+                    <img src="../images/slideshow/slideshow_3.png" alt="" />
                   </div>
                 </div>
               </div>
 
               <div class="tree" id="tree_4">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Red Oak</h3>
                   <div class="tree__hover">
                     <p>
@@ -350,13 +348,13 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_1.png" alt="" />
+                    <img src="../images/slideshow/slideshow_1.png" alt="" />
                   </div>
                 </div>
               </div>
 
               <div class="tree" id="tree_5">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Live Oak</h3>
                   <div class="tree__hover">
                     <p>
@@ -374,13 +372,13 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_2.png" alt="" />
+                    <img src="../images/slideshow/slideshow_2.png" alt="" />
                   </div>
                 </div>
               </div>
 
               <div class="tree" id="tree_6">
-                <div class="tree__body">
+                <div class="tree__primary">
                   <h3>Celdar Elm</h3>
                   <div class="tree__hover">
                     <p>
@@ -398,7 +396,7 @@
                     </div>
                   </div>
                   <div class="tree__img">
-                    <img src="../images/carousel/carousel_3.png" alt="" />
+                    <img src="../images/slideshow/slideshow_3.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -457,7 +455,7 @@
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
                   greeted me upon my arrival and made me feel welcome without
-                  being pushy. She seems to really
+                  being pushy.
                 </div>
               </div>
             </div>
@@ -481,8 +479,7 @@
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
-                  greeted me upon my arrival and made me feel welcome without
-                  being pushy.
+                  greeted me upon my arrival
                 </div>
               </div>
             </div>
