--- a/pages/home.html
+++ b/pages/home.html
@@ -141,7 +141,7 @@
           <div class="services__gallery">
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_1.jpg" alt="" />
+                <img src="../images/services/photo_1.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">Tree Sales</span>
                   <ion-icon
@@ -153,7 +153,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_2.jpg" alt="" />
+                <img src="../images/services/photo_2.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">Flowers</span>
                   <ion-icon
@@ -165,7 +165,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_3.jpg" alt="" />
+                <img src="../images/services/photo_3.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">Shrubs</span>
                   <ion-icon
@@ -177,7 +177,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallerym__item">
-                <img src="../images/services/card_4.jpg" alt="" />
+                <img src="../images/services/photo_4.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag"> Herbs</span>
                   <ion-icon
@@ -189,7 +189,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_5.jpg" alt="" />
+                <img src="../images/services/photo_5.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">Fertilizer</span>
                   <ion-icon
@@ -201,7 +201,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_6.jpg" alt="" />
+                <img src="../images/services/photo_6.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">Soil & Admendments</span>
                   <ion-icon
@@ -213,7 +213,7 @@
             </div>
             <div class="services__gallery__transform">
               <figure class="services__gallery__item">
-                <img src="../images/services/card_7.jpg" alt="" />
+                <img src="../images/services/photo_7.jpg" alt="" />
                 <div class="services__gallery__content">
                   <span class="services__gallery__tag">And More</span>
                   <ion-icon
@@ -406,25 +406,25 @@
         </div>
       </section>
 
-      <section class="testimonials">
+      <section class="reviews">
         <div class="container-min">
-          <div class="testimonials__body">
-            <div class="testimonial">
-              <div class="testimonial__body">
-                <div class="testimonial__head">
-                  <div class="testimonial__img">
+          <div class="reviews__body">
+            <div class="response">
+              <div class="response__body">
+                <div class="response__head">
+                  <div class="response__img">
                     <img
-                      src="../images/testimonials/outline_user.svg"
+                      src="../images/reviews/outline-user.svg"
                       alt="Dr. Cameron Brown"
                     />
                   </div>
 
-                  <div class="testimonial__name">
+                  <div class="response__name">
                     <h3>Dr. Cameron Brown</h3>
                     <div class="testimonial__stars">★★★★★</div>
                   </div>
                 </div>
-                <div class="testimonial__text">
+                <div class="response__text">
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
@@ -435,22 +435,22 @@
               </div>
             </div>
 
-            <div class="testimonial">
-              <div class="testimonial__body">
-                <div class="testimonial__head">
-                  <div class="testimonial__img">
+            <div class="response">
+              <div class="response__body">
+                <div class="response__head">
+                  <div class="response__img">
                     <img
-                      src="../images/testimonials/foto1.jpg"
+                      src="../images/reviews/user-1.jpg"
                       alt="Ms. Williams  Alicia"
                     />
                   </div>
 
-                  <div class="testimonial__name">
+                  <div class="response__name">
                     <h3>Ms. Williams  Alicia</h3>
-                    <div class="testimonial__stars">★★★★★</div>
+                    <div class="response__stars">★★★★★</div>
                   </div>
                 </div>
-                <div class="testimonial__text">
+                <div class="response__text">
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
@@ -460,22 +460,22 @@
               </div>
             </div>
 
-            <div class="testimonial">
-              <div class="testimonial__body">
-                <div class="testimonial__head">
-                  <div class="testimonial__img">
+            <div class="response">
+              <div class="response__body">
+                <div class="response__head">
+                  <div class="response__img">
                     <img
-                      src="../images/testimonials/foto2.jpg"
+                      src="../images/reviews/user-2.jpg"
                       alt="Mr. Alex Anderson"
                     />
                   </div>
 
-                  <div class="testimonial__name">
+                  <div class="response__name">
                     <h3>Mr. Alex Anderson</h3>
-                    <div class="testimonial__stars">★★★★★</div>
+                    <div class="response__stars">★★★★★</div>
                   </div>
                 </div>
-                <div class="testimonial__text">
+                <div class="response__text">
                   Heather was so helpful and answered all of my questions. She
                   is so professional and gave me the best customer service I
                   have ever received at a retail nursery. She immediately
@@ -487,17 +487,17 @@
         </div>
       </section>
 
-      <section class="subscribe">
-        <div class="color">
-        <div class="subscribe__body">
+      <section class="forms">
+        <div class="container-color">
+        <div class="forms__body">
           <h3>
             Enjoy our <span>promotions, discounts and tips</span> when you join
             our mailing list
           </h3>
           <form>
-            <div class="subscribe__row">
+            <div class="forms__row">
               <input type="email" placeholder="Enter Your Email" required />
-              <div class="subscribe__btn btn">
+              <div class="forms__btn btn">
                 <button>join the list</button>
               </div>
             </div>
